# DevOps

./: Dockerfile  FuncA.cpp  FuncA.cpp.orig  FuncA.h  FuncA.h.orig  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  devops  devops.1  funcA.elf  main  main.cpp  scriptA.sh  scriptB.sh
.deps/: HTTP_server.Po  main.Po
.github/workflows/: build.yml  c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2
deb/DEBIAN/: control
tests/: Makefile  Makefile.am  Makefile.in  main.cpp  time_test
tests/.deps/: main.Po
